# CMakeBoilerplate

./: CMakeLists.txt  README.md
CMakeBoilerplate/: CMakeBoilerplate.cmake
CMakeBoilerplate/CMakeListsTemplate/: CMakeLists.txt
CMakeBoilerplate/CMakeListsTestTemplate/: CMakeLists.txt
